# hazmapper-qgis-plugin

./: .black  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
Hazmapper/: hazmapper_fetch_task.py  hazmapper_layers.py  hazmapper_plugin.py  hazmapper_plugin_dockwidget.py
Hazmapper/components/: map_status.py  project_selector.py
Hazmapper/test/: test_hazmapper_fetch_task.py  test_hazmapper_layers.py  test_utils_display.py  test_utils_geometry.py
Hazmapper/test/fixtures/: basemap_layers.json
Hazmapper/utils/: display.py  qgis.py
hazmapper_plugin/: Makefile  README.html  README.txt  __init__.py  geoapi.py  geoapi_tasks.py  hazmapper_fetch_task.py  hazmapper_icons.py  hazmapper_layers.py  hazmapper_plugin.py  hazmapper_plugin_dockwidget.py  metadata.txt  pb_tool.cfg  plugin_upload.py  resources.py  resources.qrc  resources_rc.py  user.py
hazmapper_plugin/components/: map_status.py  project_selector.py
hazmapper_plugin/help/source/: conf.py  index.rst
hazmapper_plugin/test/: conftest.py  run-tests.py  test_geoapi.py  test_hazmapper_plugin_dockwidget.py  test_resources.py  test_utils_geometry.py
hazmapper_plugin/test/fixtures/: features.json  project_metadata.json
hazmapper_plugin/utils/: geometry.py  maps_of_published_projects.py  qgis.py  style.py  ui.py  user.py
scripts/: README.md  README_PUBLISHED_MAPS.md  designsafe_hazmapper_discovery.py  projects_with_hazmapper_maps.json  run_qgis_tests.sh
